# policylatch

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
docs/: gateway-threat-model.md  gateway.md  name-migration.md  policy-diff.md  policy-reference.md  runtime-adapters.md  windows-audit.md
examples/actions/: risky-network-call.json  risky-shell-command.json  safe-file-read.json
examples/adapters/: claude-code-denied-shell.json  codex-denied-shell.json
examples/gateway/: synthetic-session.jsonl  synthetic-upstream.json
examples/mcp/: client-config.json  risky-server.json  safe-server.json
examples/policies/: balanced.yaml  ci.yaml  project-balanced.yaml  strict.yaml
examples/windows-audit/: observed-firewall-change.json  proposed-service-change.json  synthetic-history.jsonl  verified-registry-change.json
src/mcp_guard/: __init__.py  __main__.py  cli.py  evaluator.py  gateway.py  html_report.py  matching.py  policy.py  reports.py  scanners.py  validation.py  windows_audit.py  windows_compare.py  windows_history.py  windows_providers.py
src/policylatch/: __init__.py  adapters.py  approval.py  cli.py  environment.py  gateway.py  gateway_trace.py  html_report.py  matching.py  models.py  policy.py  policy_diff.py  policy_tooling.py  profiles.py  reports.py  runtime_gateway.py  sarif_report.py  scanners.py  tool_policy.py  windows_compare.py  windows_history.py  windows_history_report.py  windows_providers.py  windows_registry.py  windows_registry_state.py  windows_service.py  windows_settings.py  workspace.py
tests/: test_action_manifest.py  test_adapters.py  test_brand_compat.py  test_cli.py  test_evaluator.py  test_gateway.py  test_gateway_trace.py  test_html_report.py  test_matching.py  test_policy.py  test_policy_diff.py  test_profiles.py  test_reports.py  test_runtime_gateway.py  test_sarif_report.py  test_scanners.py  test_windows_audit.py  test_windows_compare.py  test_windows_history.py  test_windows_history_report.py  test_windows_integration.py  test_windows_providers.py  test_windows_read_only_contract.py  test_windows_service.py  test_workspace.py
tests/fixtures/: fake_mcp_server.py
