[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-guard"
version = "0.1.0"
description = "A local-first permission firewall for MCP tools and AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "mcp-guard contributors" }]
keywords = ["mcp", "ai-agents", "security", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = ["PyYAML>=6.0,<7"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8,<9", "ruff>=0.5"]

[project.scripts]
mcp-guard = "mcp_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_guard"]

[tool.hatch.build.targets.sdist]
exclude = ["/PROJECT_CONTEXT.md", "/WORK_LOG.md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
